# pydalio

./: .gitignore  README.md  example_config.env  example_principles.yaml  main.py  pyproject.toml
pydalio/: __main__,py  cli.py  constants.py  db.py  principle.py  utils.py
tests/: test_db.py  test_principle.py  test_principles.yaml
