[tool.poetry]
name = "pydalio"
version = "0.1.0"
description = ""
authors = ["Tom Laumen <tom.laumen@boskalis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.5"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.scripts]
pydalio = "pydalio.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
